# colors

./: .gitignore  CMakeLists.txt  Makefile  README.md  colors  groups  main.cpp  makefile  project.config
app/include/: Color.h  Configuration.h  Mixer.h  Point.h  Tank.h  imnmath.hpp  numerical.h  procedures.h  utils.h
app/source/: CMakeLists.txt  Color.cpp  Makefile  Mixer.cpp  Tank.cpp  main.cpp  numerical.cpp  procedures.cpp  utils.cpp
app/tests/: CMakeLists.txt  Makefile  cmake_install.cmake  conjugateGradientTest.cpp  fillVDistribTest.cpp  procedureProductTest.cpp
app/tests/googletest-master/: CTestTestfile.cmake  Makefile  cmake_install.cmake
app/tests/googletest-master/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
appv2/: CMakeCache.txt  CMakeLists.txt  Makefile  chapter_6_1  chapter_6_2  cmake_install.cmake  dct.cpp  funkcje.h  plot.sh  plotcolors.sh  reszta.cpp  utils.cpp  utils.h
appv2/chapter_5_graphs/: chapter_6_1  chapter_6_10  chapter_6_11  chapter_6_3  chapter_6_4  chapter_6_5  chapter_6_6  chapter_6_7  chapter_6_8  chapter_6_9
include/: CSR.h  Color.h  Tank.h  function.h  imnmath.hpp  mixertraits.h  numerical.h  procedures.h  utils.h
source/: CMakeLists.txt  CSR.cpp  Configuration.cpp  Tank.cpp  function.cpp  main.cpp  numerical.cpp  procedures.cpp  utils.cpp
tests/: CMakeLists.txt  CSRtest.cpp  bicgstabTest.cpp  calculateAngleTest.cpp  calculateModulusTest.cpp  conjugateGradientTest.cpp  fillRoDistribTest.cpp  fillVDistribTest.cpp  main.cpp  procedureSum2DArray.cpp  proceduresTest.cpp
tests/dir/: format.py
tests/googletest-master/: .CMakeLists.txt.swp
thesis/: .plan.swo  .plan.swp  build.sh  plan
thesis/.build/: main.aux  main.tex  main.toc  notki  plan
(+3 files in other folders)
