cmake_minimum_required(VERSION 3.2)
project(colors)
add_subdirectory(source)
add_subdirectory(tests)
#aux_source_directory(source/. SRC_LIST)
#INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
#ADD_DEFINITIONS(-std=c++14 -g)
#SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
#add_executable(${PROJECT_NAME}.exe ${SRC_LIST})
